# VibeHub

./: .gitignore  LICENSE  README.md  VibeHub.txt  package-lock.json  package.json
docs/superpowers/plans/: 2026-07-07-approval-feedback.md
docs/superpowers/specs/: 2026-06-30-vibehub-mvp-design.md  2026-07-07-approval-feedback-design.md
hooks/: vibehub-hook.ps1
scripts/: bump-version.js  gen-icons.js  print-hook-config.ps1  test-approval.ps1  test-event.ps1
src/: app.js  index.html  settings.css  settings.html  settings.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hooks.rs  lib.rs  main.rs  server.rs  state.rs
