[package]
name = "vibehub"
version = "0.1.0"
description = "VibeHub - AI Agent 工作中心"
authors = ["VibeHub"]
edition = "2021"

[lib]
name = "vibehub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
